# whatsappbot

./: .coverage  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_STATUS.md  README.md  RESUME_COMMAND.md  WHATSAPP_SERVICE_REPLICATION_GUIDE.md  docker-compose.yml  package.json  prueba.py  pyproject.toml  resume.bat  resume_project.py  test_utf8.json  whatsapp-bot-specs.md  whatsapp_to_zoho_integration.py
.claude/: settings.local.json
docs/: CONVERSATION_THREADING_SYSTEM.md  INCIDENT_CLASSIFICATION_TESTING.md  MESSAGE_LOGGING.md  NICARAGUA_WHATSAPP_SETUP.md  WHATSAPP_CONNECTION_FIX.md
services/classifier-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/classifier-service/app/: main.py
services/classifier-service/app/agents/: classifier.py
services/classifier-service/app/ai/: model_manager.py
services/classifier-service/app/models/: schemas.py
services/classifier-service/testing/: README.md  claude_classifier.py  openai_classifier.py  run_test.py  run_test_standalone.py  voting_system.py
services/classifier-service/tests/: __init__.py  conftest.py  run_tests_standalone.py  test_conversation_tracker.py  test_schemas.py
services/ticket-service/: .env.example  .gitignore  Dockerfile  README.md  ZOHO_AUTH_SETUP.md  default_contact.json  get_my_id.py  pyproject.toml  requirements.txt  setup_zoho_auth.py  test_customer_workflow.py
services/ticket-service/app/: auth_server.py  main.py
services/ticket-service/app/models/: schemas.py
services/ticket-service/app/services/: ticket_queue.py  zoho_client.py
services/ticket-service/app/utils/: redis_client.py
services/ticket-service/scripts/: dev.py
services/whatsapp-service/: .env.docker  .env.example  .gitignore  Dockerfile  Dockerfile.production  INTEGRATION_GUIDE.md  README.md  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  redis.conf  redis.production.conf
services/whatsapp-service/src/: index.js  whatsapp-service.js
tests/: README.md  conftest.py  requirements-test.txt
tests/Mensajes Grupo Whatsapp/WhatsApp Chat - Migración SAP S_4 Hana/: 00000170-articulos sin precio.xlsx  00000176-Copia de articulos sin precio.xlsx  00000217-codigo sin precio 2.xlsx  00000239-codigo sin precio 2.xlsx  00000248-Miriam Supervisrs.vcf  00000250-Edna Turistore.vcf  00000282-Mirna Vista.vcf  00000303-Miriam Bucio Supervisora.vcf  00000346-PRODUCTOS SIN PRECIO REVISADO enviar compras.xlsx  00000349-PRODUCTOS SIN PRECIO REVISADO V3.xlsx  00000458-Angela Chale Supervisora Cozumel.vcf  00001109-INCIDENCIAS ARTESANIAS 07-08-25.pptx  00001111-INCIDENCIAS DE PRODUCCION.pptx  00001164-607 FALLA DE REEMBOLSOS.pptx  00001284-FALLO DE REALIZAR SUGERIDO DE TRASPASO.pptx  00001550-RECEPCION PIE DE CAMION SEGUIMIENTO.pptx  00001601-AUDIO-2025-08-12-20-18-32.opus  00001622-FALLAS ALL RETAIL.pptx  00002298-AUDIO-2025-08-27-10-52-57.opus  00002381-606 Tequila Party FALLAS ALL RETAIL.pptx  00002383-Presentacio╠ün (1) (2).pptx  00002771-AUDIO-2025-09-04-11-54-54.opus  00002773-AUDIO-2025-09-04-11-54-54.opus  00003074-Plantilla_Extensio╠ün_11092025.xlsx  00003088-ARTICULO DUPLICADO.pptx  00003089-incidencia licores.pptx  00003090-PRODUCTO DUPLICADO.pptx  00003522-GCS_RPT_ExistenciaxDia.xls  00004750-AUDIO-2025-11-13-19-06-49.opus  _chat.txt
tests/docker/: Dockerfile.test  docker-compose.test.yml
tests/fixtures/: messages.py
tests/integration/: test_message_flow.py
tests/unit/classifier-service/: test_classifier.py  test_main.py  test_model_manager.py  test_redis_client.py
tests/unit/ticket-service/: test_ticket_queue.py  test_zoho_client.py
tests/unit/whatsapp-service/: response-handler.test.js  whatsapp-service.test.js
(+24 files in other folders)
