[project]
name = "zoho-desk-api"
version = "0.1.0"
description = "Cliente para la API de Zoho Desk usando Self Client"
authors = [
    {name = "Tu Nombre", email = "tu.email@ejemplo.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0,<7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 