[project]
name = "zoho-desk-api"
version = "0.1.0"
description = "Cliente para la API de Zoho Desk usando Self Client"
authors = [
    {name = "Tu Nombre", email = "tu.email@ejemplo.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0,<7.2.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "httpx>=0.24.1",
    "fakeredis>=2.20.1",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "redis>=5.0.1",
    "openai>=1.3.0",
    "google-generativeai>=0.3.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = [
    "--cov=services",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--verbose",
    "-ra"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "e2e: End-to-end tests",
    "slow: Slow running tests",
] 